--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
                     <div>
                         <h2 class="about_subtitle">Hi, Im John Reymart Billiones</h2>
-                        <span class="about_profession">Web designer</span>
-                        <p class="about_text">Hi! I’m John Reymart Billiones, a web developer passionate about creating engaging, user-friendly websites. With
-                        expertise in HTML, CSS, and JavaScript, I love turning ideas into reality through clean code and innovative designs.
-                        Always eager to learn and explore new technologies, I'm excited to make a positive impact in the digital world. Let’s
-                        connect and build something amazing together!</p>
+                        <span class="about_profession">MIT, Full-Stack Developer, Data Scientist</span>
+                        <p class="about_text">I'm a full-stack developer at Game Zone, where I create engaging user-friendly applications. Building interactive
+                        interfaces and optimizing performance for the best user experience. Passionate about problem-solving, I continuously
+                        learn new technologies and trends. My goal is to develop projects that stand out and make an impact. Let’s connect and
+                        create something exciting!</p>
 
                         <div class="about_social">
                             <a href="https://www.linkedin.com/in/reyy-billiones-653276326/" class="about_social-icon"><i class='bx bxl-linkedin' ></i></a>
@@ -86,6 +86,11 @@
                         <h3 class="skills_subtitle">Development</h3>
                         <span class="skills_name">Html</span>
                         <span class="skills_name">Css</span>
+                        <span class="skills_name">Javasript</span>
+                        <span class="skills_name">Java</span>
+                        <span class="skills_name">Django</span>
+                        <span class="skills_name">Assembly</span>
+                        <span class="skills_name">React</span>
                         
                         <h3 class="skills_subtitle">Design</h3>
                         <span class="skills_name">Figma</span>
