--- a/index.html
+++ b/index.html
@@ -111,10 +111,24 @@
                         <img src="assets/img/cert1.png" alt="">
 
                         <div class="certificates_link">
-                            <a href="#" class="certificates_link-name">Successfully completing a online course "Introduction to No SQL"</a>
+                            <a href="#" class="certificates_link-name">Completed online course "Introduction to No SQL"</a>
                         </div>
                     </div>
-                </div>
+                    <div class="certificates_img">
+                        <img src="assets/img/cert2.jpg" alt="">
+                    
+                        <div class="certificates_link">
+                            <a href="#" class="certificates_link-name">Completed online course "Cloud Computing Service Models"</a>
+                        </div>
+                    </div>
+                    <div class="certificates_img">
+                        <img src="assets/img/cert3.jpg" alt="">
+                    
+                        <div class="certificates_link">
+                            <a href="#" class="certificates_link-name">Completed online course "Operators in MySQL"</a>
+                        </div>
+                    </div>
+                </div>               
             </section>
 
             <section class="contact section" id="contact">
