--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
                             <a href="#" class="certificates_link-name">Completed online course "Operators in MySQL"</a>
                         </div>
                     </div>
+                    <div class="certificates_img">
+                        <img src="assets/img/cert4.jpg" alt="">
+                    
+                        <div class="certificates_link">
+                            <a href="#" class="certificates_link-name">Completed online course "Cloud Foundations"</a>
+                        </div>
+                    </div>
                 </div>               
             </section>
 
