--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
                             <a href="#" class="certificates_link-name">Completed online course "Introduction to Cloud Security"</a>
                         </div>
                     </div>
+                    <div class="certificates_img">
+                        <img src="assets/img/cert9.jpg" alt="">
+                    
+                        <div class="certificates_link">
+                            <a href="#" class="certificates_link-name">Completed online course "SQL"</a>
+                        </div>
+                    </div>
                 </div>               
             </section>
 
@@ -171,9 +178,6 @@
 
                 <div class="contact_container bd-grid">
                     <div class="contact_info">
-                        <h3 class="contact_subtitle">EMAIL</h3>
-                        <span class="contact_text">reyy100101@gmail.com</span>
-
                         <h3 class="contact_subtitle">PHONE</h3>
                         <span class="contact_text">09665323995</span>
 
