--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
                     <div>
                         <h2 class="about_subtitle">Hi, Im John Reymart Billiones</h2>
-                        <span class="about_profession">MIT, Full-Stack Developer, Data Scientist</span>
-                        <p class="about_text">I'm a full-stack developer at Game Zone, where I create engaging user-friendly applications. Building interactive
+                        <span class="about_profession">Developer</span>
+                        <p class="about_text">I'm a developer at Game Zone, where I create engaging user-friendly applications. Building interactive
                         interfaces and optimizing performance for the best user experience. Passionate about problem-solving, I continuously
                         learn new technologies and trends. My goal is to develop projects that stand out and make an impact. Let’s connect and
                         create something exciting!</p>
@@ -89,16 +89,11 @@
                         <span class="skills_name">Javasript</span>
                         <span class="skills_name">Java</span>
                         <span class="skills_name">Django</span>
-                        <span class="skills_name">Assembly</span>
                         <span class="skills_name">React</span>
-                        
-                        <h3 class="skills_subtitle">Design</h3>
-                        <span class="skills_name">Figma</span>
-                        <span class="skills_name">Photoshop</span>
                     </div>
 
                     <div class="skills_img">
-                        <img src="assets/img/photo-collage.png.png" alt="">
+                        <img src="assets/img/photo-collage.png" alt="">
                     </div>
                 </div>
             </section>
