--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#about" class="home_scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
 
-                    <img src="assets/img/reyy home.png" alt="" class="home_img">
+                    <img src="assets/img/reyyghibli.png" alt="" class="home_img">
                 </div>
             </section>
             
@@ -178,6 +178,8 @@
 
                         <h3 class="contact_subtitle">ADRRESS</h3>
                         <span class="contact_text">Amparo Village Ilang, Davao City, Philippines</span>
+
+                        
                     </div>
 
                     <form action="" class="contact_form">
@@ -216,7 +218,6 @@
                     <h2 class="footer_title">FOLLOW</h2>
                     <a href="https://www.facebook.com/johnlolikz" class="footer_social"><i class='bx bxl-facebook' ></i></a>
                 </div>
-
 
             </div>
         </footer>
