--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#about" class="home_scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
 
-                    <img src="assets/img/reyyghibli.png" alt="" class="home_img">
+                    <img src="assets/img/reyy.png" alt="" class="home_img">
                 </div>
             </section>
             
