--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 details through a simple and intuitive interface.
                             </p>
                             <span class="projects_date">October 2024</span><br>
-                            <a href="https://snack.expo.dev/@reyysensei/manhwaportal-app-" class="projects_link" target="_blank">View
+                            <a href="https://bosny-spray-paint.vercel.app/" class="projects_link" target="_blank">View
                                 Project</a>
                         </div>
                     </div>
