--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="about_container bd-grid">
                     <div class="about_img">
-                        <img src="assets/img/reyy pic.jpg" alt="">
+                        <img src="assets/img/reyypic.png" alt="">
                     </div>
 
                     <div>
