--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                         <div class="projects_content">
                             <h3 class="projects_title">TruckAlert: Blind Spot Detection and Alert System</h3>
                             <p class="projects_description">
-                            An IoT system designed to assist truck drivers by detecting vehicles or obstacles in the truck’s
-                            blind spots and providing real-time alerts. The system helps reduce the risk of accidents by increasing driver
+                            An IoT system with mobile integration designed to assist truck drivers by detecting vehicles or obstacles in the truck’s
+                            blind spots and providing real-time alerts to the app from the drivers phone. The system helps reduce the risk of accidents by increasing driver
                             awareness especially during lane changes and tight maneuvers.
                             </p>
                             <span class="projects_date">December 2025</span>
